--- a/src/public/game/flybird.html
+++ b/src/public/game/flybird.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>flybird</title>
-		<link rel="stylesheet" type="text/css" href="css/flybird.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/flybird.css"/>
 	</head>
 
 	<body>
@@ -16,6 +16,6 @@
 		</div>
 	</body>
 	
-	<script src="lib/jquery/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/flybird.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../lib/jquery/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../js/flybird.js" type="text/javascript" charset="utf-8"></script>
 </html>
